--- a/_posts/2020-05-17-guitar.markdown
+++ b/_posts/2020-05-17-guitar.markdown
@@ -5,6 +5,8 @@ title: "Guitar"
 categories: personal
 ---
 
+![smiley](/resources/guitar/IMG_20200518_103715.JPG)
+
 Over the last couple of months, I have made an electric guitar for the first time. Actually most of those two months I wasn't doing anything apart
 from waiting for parts to arrive. I was mostly buying parts from China and they were all held up by Covid-19 delays.
 
